# CrabNBT

./: .gitignore  Cargo.toml  README.md  cachegrind.out.83682  callgrind.out.83988  nbt.hexpat
.github/workflows/: tests.yml
benches/: gungraun.rs  read.rs  write.rs
src/: error.rs  lib.rs  macros.rs  nbt.rs  slice_cursor.rs  utils.rs
src/nbt/: compound.rs  list.rs  mod.rs  nbt_trait.rs  root_nbt.rs  tag.rs  utils.rs
src/nbt/utils/: slice_cursor.rs
src/serde/: arrays.rs  bool.rs  de.rs  mod.rs  nbt_types.rs  ser.rs
tests/: list.rs  macros.rs  mod.rs  roundtrips.rs  serde.rs  snbt.rs  tag.rs  util.rs  utils.rs
tests/data/: adversarial.snbt  chunk.nbt
tests/serde/: basic.rs  bigtest.rs  complex.rs  complex_text.rs  map.rs  mod.rs  test_data_definitions.rs  unit_variant.rs
