[package]
name = "crab_nbt"
description = "Up-to-date Rust crate for easy and intuitive working with NBT data."
repository = "https://github.com/CrabCraftDev/CrabNBT"
keywords = ["minecraft", "nbt", "crabcraft"]
categories = ["parser-implementations"]
authors = ["Norbiros", "SzczurekYT", "other CrabNBT Contributors"]
readme = "README.md"
license = "GPL-3.0-only"
version = "0.2.1"
edition = "2021"
exclude = ["tests", ".github"]

[features]
full = ["macro", "serde"]
default = ["macro"]
macro = []
serde = ["dep:serde"]

[dependencies]
bytes = "1.7.1"
cesu8 = "1.1.0"
derive_more = { version = "1.0.0", features = ["into", "from"] }
thiserror = "1.0.63"
serde = { version = "1.0.209", optional = true, features = ["derive"] }
