[package]
name = "crab_nbt"
description = "Up-to-date Rust crate for easy and intuitive working with NBT data."
repository = "https://github.com/CrabCraftDev/CrabNBT"
keywords = ["minecraft", "nbt", "crabcraft"]
categories = ["parser-implementations"]
authors = ["Norbiros", "SzczurekYT", "other CrabNBT Contributors"]
readme = "README.md"
license = "GPL-3.0-only"
version = "0.2.9"
edition = "2021"
exclude = ["tests", ".github"]

[features]
full = ["macro", "serde"]
default = ["macro"]
macro = []
serde = ["dep:serde"]

[dependencies]
bytes = "1.10.0"
cesu8 = "1.1.0"
derive_more = { version = "2.0.1", features = ["into", "from"] }
thiserror = "2.0.11"
serde = { version = "1.0.218", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
flate2 = "1.1.0"

[package.metadata."docs.rs"]
all-features = true

[profile.bench]
debug = true

[[bench]]
name = "read"
harness = false
